# blade-menu

./: CMakeLists.txt  NEWS  README
bar-plugin/: CMakeLists.txt  applications-page.cpp  applications-page.h  blademenu.desktop  category.cpp  category.h  command-edit.cpp  command-edit.h  command.cpp  command.h  configuration-dialog.cpp  configuration-dialog.h  element.h  favorites-page.cpp  favorites-page.h  icon-size.cpp  icon-size.h  launcher-view.cpp  launcher-view.h  launcher.cpp  launcher.h  page.cpp  page.h  plugin.cpp  plugin.h  profile-picture.cpp  profile-picture.h  query.cpp  query.h  recent-page.cpp  recent-page.h  register-plugin.c  resizer-widget.cpp  resizer-widget.h  run-action.cpp  run-action.h  search-action.cpp  search-action.h  search-page.cpp  search-page.h  (+9 more)
icons/: CMakeLists.txt
po/: CMakeLists.txt  am.po  ar.po  ast.po  bg.po  blade-menu-plugin.pot  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  ne.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  (+11 more)
