set(INSTALL_ICONDIR ${CMAKE_INSTALL_DATADIR}/icons/hicolor)

install(FILES hi16-app-blademenu.png
        DESTINATION ${INSTALL_ICONDIR}/16x16/apps
        RENAME blade-menu.png)

install(FILES hi22-app-blademenu.png
        DESTINATION ${INSTALL_ICONDIR}/22x22/apps
        RENAME blade-menu.png)

install(FILES hi24-app-blademenu.png
        DESTINATION ${INSTALL_ICONDIR}/24x24/apps
        RENAME blade-menu.png)

install(FILES hi32-app-blademenu.png
        DESTINATION ${INSTALL_ICONDIR}/32x32/apps
        RENAME blade-menu.png)

install(FILES hi48-app-blademenu.png
        DESTINATION ${INSTALL_ICONDIR}/48x48/apps
        RENAME blade-menu.png)

install(FILES hi64-app-blademenu.png
        DESTINATION ${INSTALL_ICONDIR}/64x64/apps
        RENAME blade-menu.png)

install(FILES hi128-app-blademenu.png
        DESTINATION ${INSTALL_ICONDIR}/128x128/apps
        RENAME blade-menu.png)

install(FILES hi256-app-blademenu.png
        DESTINATION ${INSTALL_ICONDIR}/256x256/apps
        RENAME blade-menu.png)

install(FILES hisc-app-blademenu.svg
        DESTINATION ${INSTALL_ICONDIR}/scalable/apps
        RENAME blade-menu.svg)
